--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1471,7 +1471,7 @@ main > .tit {
   border-radius: 50%;
   position: absolute;
   left: 0;
-  top: 3.05556vw;
+  top: 2.22222vw;
 }
 
 .text_list li b {
@@ -1576,9 +1576,15 @@ main > .tit {
         -ms-flex-direction: column;
             flex-direction: column;
     position: fixed;
-    right: 10px;
-    top: 50%;
+    left: 50%;
+    bottom: 200px;
     z-index: 200;
+    -webkit-transform: translateX(515px);
+            transform: translateX(515px);
+  }
+  .side_banner a + a {
+    display: block;
+    margin-top: 10px;
   }
   #wrap.open {
     height: 100%;
@@ -1683,7 +1689,7 @@ main > .tit {
   .text_list li::after {
     width: 3px;
     height: 3px;
-    top: 12px;
+    top: 11px;
   }
   .text_list li p {
     margin-top: 0;
@@ -2352,6 +2358,10 @@ main > .tit {
   margin-top: 2.22222vw;
 }
 
+.member input.text + span + .text {
+  margin-top: 2.22222vw;
+}
+
 .member .error_txt {
   font-size: 3.88889vw;
   color: #EA5504;
@@ -2411,6 +2421,9 @@ main > .tit {
     margin-top: 0;
     margin-bottom: 34px;
   }
+  .member .input_wrap span + .text {
+    margin-top: 10px;
+  }
   .member .agree_wrap {
     letter-spacing: -0.03px;
     margin: 0 0 30px;
@@ -2451,6 +2464,9 @@ main > .tit {
     font-weight: 400;
   }
   .member input.text + .text {
+    margin-top: 10px;
+  }
+  .member input.text + span + .text {
     margin-top: 10px;
   }
   .member .error_txt {
@@ -2518,30 +2534,21 @@ main > .tit {
   letter-spacing: -0.03em;
   color: #333;
   position: relative;
-  padding-right: 2.77778vw;
+  padding-right: 3.33333vw;
   padding-left: 0.55556vw;
 }
 
 .book .tit_box span::after {
   content: '';
   display: block;
-  width: 1.66667vw;
-  height: 2.5vw;
-  background: url(../img/ico_app_right_b.svg) no-repeat 0 0/cover;
-  position: absolute;
-  right: 0;
-  top: 2.5vw;
-}
-
-.book .tit_box span::before {
-  content: '';
-  display: block;
-  width: 95%;
-  height: 1px;
-  background-color: #000;
+  width: 100%;
+  height: 2.77778vw;
+  background: url(../img/ico_strike.svg) no-repeat 0 0/99%;
   position: absolute;
   left: 0;
   top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 
 .book .tit_box b {
@@ -2629,8 +2636,8 @@ main > .tit {
 
 .book .school_year_wrap .book_list_box ul li img {
   width: 100%;
-  -webkit-filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
-          filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
+  -webkit-filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.3));
+          filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.3));
 }
 
 .book .school_year_wrap .book_list_box ul li .text_box {
@@ -3172,11 +3179,8 @@ main > .tit {
     padding-left: 7px;
   }
   .book .tit_box span::after {
-    width: 8px;
     height: 12px;
-    background: url(../img/ico_app_right_b.svg) no-repeat 0 0/cover;
-    position: absolute;
-    top: 10px;
+    background: url(../img/ico_strike.svg) no-repeat 0 0/99%;
   }
   .book .tit_box b {
     font-size: 22px;
@@ -3240,8 +3244,6 @@ main > .tit {
   }
   .book .school_year_wrap .book_list_box ul li img {
     width: 137px;
-    -webkit-filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
-            filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
   }
   .book .school_year_wrap .book_list_box ul li .text_box {
     width: calc(100% - 162px);
