--- a/assets/scss/pages/_book.scss
+++ b/assets/scss/pages/_book.scss
@@ -41,29 +41,18 @@
             letter-spacing: -0.03em;
             color:#333;
             position: relative;
-            padding-right: vw(10);
+            padding-right: vw(12);
             padding-left: vw(2);
             &::after {
                 content: '';
                 display: block;
-                width: vw(6);
-                height: vw(9);
-                background: url(../img/ico_app_right_b.svg) no-repeat 0 0 / cover;
+                width: 100%;
+                height: vw(10);
+                background: url(../img/ico_strike.svg) no-repeat 0 0 / 99%;
                 position: absolute;
-                right: 0;
-                top:vw(9);
-            }
-            &::before {
-                content: '';
-                display: block;
-                width: 95%;
-                height: 1px;
-                background-color: #000;
-                position: absolute;
-                left:0;
+                left: 0;
                 top:50%;
-
-
+                transform: translateY(-50%);
             }
         }
         b {
@@ -124,7 +113,7 @@
                     }
                     img {
                         width: 100%;
-                        filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
+                        filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.3));
                     }
                     .text_box {
                         text-align: center;
@@ -534,11 +523,8 @@
                 padding-right: 15px;
                 padding-left: 7px;
                 &::after {
-                    width: 8px;
                     height: 12px;
-                    background: url(../img/ico_app_right_b.svg) no-repeat 0 0 / cover;
-                    position: absolute;
-                    top:10px;
+                    background: url(../img/ico_strike.svg) no-repeat 0 0 / 99%;
                 }
             }
             b {
@@ -598,7 +584,6 @@
                         }
                         img {
                             width: 137px;
-                            filter: drop-shadow(1px 1px 3px rgba(0, 0, 0, 0.3));
                         }
                         .text_box {
                             width: calc(100% - 162px);
