--- a/assets/scss/pages/_member.scss
+++ b/assets/scss/pages/_member.scss
@@ -124,6 +124,9 @@
         & + .text {
             margin-top: vw(8);
         }
+        & + span + .text {
+            margin-top: vw(8);
+        }
     }
     .error_txt {
         font-size: vw(14);
@@ -185,6 +188,9 @@
         .input_wrap {
             margin-top: 0;
             margin-bottom: 34px;
+            span + .text {
+                margin-top: 10px;
+            }
         }
         .agree_wrap {
             letter-spacing: -0.03px;
@@ -213,6 +219,9 @@
                 font-weight: 400;
             }
             & + .text {
+                margin-top: 10px;
+            }
+            & + span + .text {
                 margin-top: 10px;
             }
         }
