--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -27,6 +27,7 @@ footer.footer {
         p {
             color:#bbb;
             font-size: vw(13);
+            font-weight: 400;
         }
         .link_list {
             display: flex;
@@ -36,7 +37,7 @@ footer.footer {
             a {
                 color:#eee;
                 font-size: vw(14);
-                font-weight: 500;
+                font-weight: 500;                
                 &::after {
                     content: '';
                     display: inline-block;
@@ -83,6 +84,7 @@ footer.footer {
             p {
                 color:#fff;
                 font-size: px(16);
+                font-weight: 300;
             }
             .link_list {
                 display: flex;
@@ -94,6 +96,9 @@ footer.footer {
                     font-size: px(18);
                     font-weight: 500;
                     margin-right: px(20);
+                    &:first-child {
+                        font-weight: 700;
+                    }
                     &::after {
                         display: none;
                         width: 1px;
