--- a/assets/scss/common.scss
+++ b/assets/scss/common.scss
@@ -14,6 +14,7 @@
 @import 'pages/main';
 @import 'pages/member';
 @import 'pages/book';
+@import 'pages/app';
 
 
 
@@ -78,6 +79,12 @@ a {
 	display: flex;
 	flex-direction: column;
 	height: 100%;
+}
+select {
+	color:#999;
+}
+input::placeholder {
+	color:#999;
 }
 input[type=checkbox] {
 	width: vw(24);
