--- a/assets/scss/layout/_layout.scss
+++ b/assets/scss/layout/_layout.scss
@@ -295,6 +295,142 @@ main {
     }
 }
 
+.layer_pop {
+        z-index: 1000;
+        opacity: 0;
+        position: fixed;
+        width: 100%;
+        left: 0;
+        bottom:0;
+        transform: translateY(100%);
+        border-top-right-radius: 16px;
+        border-top-left-radius: 16px;
+        background-color: #fff;
+        transition: transform .3s ease-in-out;
+        padding:0 vw(15);
+    &.open {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    .tit {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: vw(52);
+        font-size: vw(18);
+        font-weight: 500;
+        letter-spacing: -0.05em;
+        border-bottom: 1px solid #C4C4C4;
+        margin-bottom: vw(22);
+    }
+    .btn_closed {
+        position: absolute;
+        right:vw(8);
+        top:vw(8);
+        display: flex;
+        width: vw(36);
+        height: vw(36);
+        background: url(../img/ico_closed_layer.svg) no-repeat center / vw(18);
+    }
+    input {
+        display: flex;
+        align-items: center;
+        height: vw(32);
+        padding:0 vw(11);
+        font-size: vw(16);
+        color:#333;
+        background: #F4F5F7;
+        border: 1px solid #C4C4C4;
+        box-sizing: border-box;
+        &::placeholder {
+            color:#999;
+        }
+    }
+    b {
+        font-size: vw(16);
+        font-weight: 700;
+        color:#999;
+    }
+    &.certification {
+        padding-bottom: vw(46);
+        .input_form {
+            margin-bottom: vw(20);
+            li {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                margin-bottom: vw(9);
+                &:last-child {
+                    margin-bottom: 0;
+                }
+
+                input {
+                    width: vw(224);
+                }
+            }
+        }
+        .t1 {
+            margin-bottom: vw(25);
+            font-size: vw(15);
+            color:#777;
+            letter-spacing: -0.05em;
+        }
+    }
+    &.search_school {
+        padding-bottom: vw(16);
+        input {
+            width: 100%;
+        }
+        .input_wrap {
+            display: flex;
+            align-items: center;
+            flex: 1 1 0;
+            &.direct {
+                input {
+                    flex:1 1 0%;
+                    margin:0 vw(7) 0 vw(9);
+                }
+                b {
+                    color: #000;
+                    font-weight: 500;
+                }
+            }
+            button {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: vw(32);
+                background: #EA5504;
+                border-radius: 3px;
+                font-size: vw(15);
+                font-weight: 700;
+                color:#fff;
+                padding:0 vw(10);
+            }
+        }
+        .select_list {
+            height: vw(220);
+            margin:vw(13) 0 vw(16);
+            padding:vw(10) vw(12);
+            background: #F4F5F7;
+            border: 1px solid #C4C4C4;
+            box-sizing: border-box;
+            font-size: vw(15);
+            color:#777;
+            overflow-y: auto;
+            div {
+                margin-bottom: vw(6);
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+            b {
+                color:#333;
+            }
+        }
+    }
+}
+
 @include desktop {
     .btn_main {
         margin:0 auto;
@@ -481,6 +617,110 @@ main {
                 color:#333;
                 text-decoration: underline;
                 font-weight: 500;
+            }
+        }
+    }
+
+    .layer_pop {
+        position: fixed;
+        width: 100%;
+        left: 50%;
+        top:50%;
+        bottom:auto;
+        transform: translate(-50%,-50%);
+        border-top-right-radius: 0;
+        border-top-left-radius: 0;
+        transition: none;
+        padding:0 25px;
+        z-index: -1;
+        
+        &.open {
+            transition: opacity .3s ease-in-out;
+            z-index: 1000;
+            bottom:auto;
+            transform: translate(-50%,-50%);
+        }
+        .tit {
+            height: 67px;
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+        .btn_closed {
+            position: absolute;
+            right:8px;
+            top:11px;
+            width: 44px;
+            height: 44px;
+            background: url(../img/ico_closed_layer.svg) no-repeat center / 22px;
+        }
+        input {
+            height: 40px;
+            padding:0 10px;
+            font-size: 22px;
+        }
+        b {
+            font-size: 22px;
+            letter-spacing: -0.03em;
+        }
+        &.certification {
+            width: 540px;
+            padding-bottom: 36px;
+            .inner {
+                padding:0 25px;
+            }
+            .input_form {
+                margin-bottom: 30px;
+                li {
+                    display: flex;
+                    align-items: center;
+                    justify-content: space-between;
+                    margin-bottom: 12px;
+                    &:last-child {
+                        margin-bottom: 0;
+                    }
+
+                    input {
+                        width: 300px;
+                    }
+                }
+            }
+            .t1 {
+                margin:39px 0 35px;
+                font-size: 20px;
+            }
+        }
+        &.search_school {
+            width: 900px;
+            padding-bottom: 20px;
+            input {
+                width: 100%;
+            }
+            .input_wrap {
+                display: flex;
+                align-items: center;
+                &.direct {
+                    input {
+                        margin:0 12px 0 15px;
+                    }
+                    b {
+                        color: #000;
+                        font-weight: 500;
+                    }
+                }
+                button {
+                    height: 40px;
+                    font-size: 21px;
+                    padding:0 35px;
+                }
+            }
+            .select_list {
+                height: 340px;
+                margin:20px 0;
+                padding:13px 16px;
+                font-size: 20px;
+                div {
+                    margin-bottom: 10px;
+                }
             }
         }
     }
